[package]
name = "stracciatella"
version = "0.1.0"
authors = ["Stefan Lau <github@stefanlau.com>"]
edition = "2018"

[profile.dev]
rpath = true
panic = "abort"

[profile.release]
rpath = true
debug = true
panic = "abort"

[lib]
crate-type = ["staticlib"]
name = "stracciatella"
path = "src/stracciatella.rs"

[[bin]]
name = "ja2-resource-pack"
path = "src/bin_resource_pack.rs"
required-features = ["bin"]

[dependencies]
getopts = "0.2.15"
libc = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
dirs = "1"
byteorder = "1.3.1"
hex = "0.3.2"
digest = "0.8.0"
md-5 = "0.8.0"
sha-1 = "0.8.1"
blake2 = "0.8.0"

[dependencies.clap]
optional = true
version = "~2.33"
default-features = false

[dev-dependencies]
regex = "0.1"
tempdir = "0.3"

[build-dependencies]
cbindgen = "0.6"

[features]
default = ["bin"]
bin = ["clap"]
