CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(lua)

if(UNIX AND NOT MINGW)
    add_definitions("-DLUA_USE_POSIX")
endif()

FILE(GLOB LUA_SRC "${CMAKE_CURRENT_SOURCE_DIR}/lua/src/*.c")
LIST(REMOVE_ITEM LUA_SRC
    "${CMAKE_CURRENT_SOURCE_DIR}/lua/src/lua.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/lua/src/luac.c")

ADD_LIBRARY(lua ${LUA_SRC})
